[package]
name = "pompom"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.11"
axum = {version = "0.8.8", features = ["multipart"]}
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.8", features = ["limit"] }
image = "0.25.9"